# terminal-tools

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/: base.py  cli_ai_adapter.py  copilot_adapter.py  gcloud_adapter.py  langgraph_agent_server_adapter.py  langgraph_delegate_adapter.py  router.py  terminal_adapter.py
app/api/: routes.py
app/contexts/: claude.md  codex.md  copilot.md  google_cli.md  shared.md  terminal.md
app/core/: settings.py  utils.py
app/mcp_server/: server.py
app/models/: schemas.py
app/recipes/git/: status_safe.yaml
app/recipes/google/: cloud_run_service.yaml  current_project.yaml  list_projects.yaml
app/recipes/terminal/: list_repo_files.yaml  read_log_tail.yaml  run_allowed_script.yaml
app/routing/: policy.yaml  router.py  task_patterns.yaml
app/security/: command_allowlist.yaml  command_denylist.yaml  path_policy.yaml  path_policy_service.py  path_rules.yaml  validator.py
app/services/: container.py  context_service.py  executor.py  langgraph_service.py  recipe_service.py  repo_ops_service.py  task_service.py  trash_service.py
app/storage/: db.py
app/templates/: task_prompt.txt
scripts/: claude-wrapper.sh  run_api.sh  run_mcp.sh
tests/: test_adapters.py  test_api.py  test_context.py  test_langgraph_repo_ops.py  test_path_policy.py  test_routing.py  test_security.py  test_task_service.py  test_trash.py
